opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/incr_select"
bug-reports: "https://github.com/janestreet/incr_select/issues"
dev-repo: "https://github.com/janestreet/incr_select.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "incr_select" "--root" "." "-j" jobs]
]
depends: [
  "core_kernel"
  "incremental_kernel"
  "jbuilder"
  "ppx_driver"
  "ppx_jane"
  "js_of_ocaml"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Handling of large set of incremental outputs from a single input

Ability to create a large set of incremental outputs based on a single
incremental input, where some subset of the outputs are selected to
have specific values, and the remainder are left with a specified
default value. The outputs are updated in time proportional to the
number of outputs that are changed, independent of the number of
outputs that exist.
"
