opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/incr_select"
bug-reports: "https://github.com/janestreet/incr_select/issues"
dev-repo: "git+https://github.com/janestreet/incr_select.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/incr_select/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "4.14.0"}
  "core"        {>= "v0.16" & < "v0.17"}
  "incremental" {>= "v0.16" & < "v0.17"}
  "ppx_jane"    {>= "v0.16" & < "v0.17"}
  "dune"        {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Handling of large set of incremental outputs from a single input"
description: "
Ability to create a large set of incremental outputs based on a single
incremental input, where some subset of the outputs are selected to
have specific values, and the remainder are left with a specified
default value. The outputs are updated in time proportional to the
number of outputs that are changed, independent of the number of
outputs that exist.
"
